force-app/main/default/objects/RW_Employee__c/fields/Company_name__c.field-meta.xml
<CustomField>
    <fullName>Company_name__c</fullName>
    <label>Company name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>