force-app/main/default/objects/RW_Employee__c/fields/KL_Department__c.field-meta.xml
<CustomField>
    <fullName>KL_Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Safety &amp; Security</fullName>
            </value>
            <value>
                <fullName>MEP</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>General Administration</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>IT / ERP</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Liaisoning</fullName>
            </value>
            <value>
                <fullName>Stores</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>QA-QC</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Lead Management</fullName>
            </value>
            <value>
                <fullName>Internal Audit</fullName>
            </value>
            <value>
                <fullName>Quantity Survey</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Horticulture</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Planning &amp; Estimation</fullName>
            </value>
            <value>
                <fullName>Company Secretary</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Facility Management</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>