force-app/main/default/objects/RW_Employee__c/fields/RW_Designation__c.field-meta.xml
<CustomField>
    <fullName>RW_Designation__c</fullName>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>