force-app/main/default/objects/RW_Employee__c/fields/RW_Location_for_work__c.field-meta.xml
<CustomField>
    <fullName>RW_Location_for_work__c</fullName>
    <label>Location for work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>