force-app/main/default/objects/RW_Employee__c/fields/RW_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Phone_No__c</fullName>
    <label>Phone No.</label>
    <type>Phone</type>
</CustomField>